Hopefully more robust fix for vertical writing mode zero width table cell bug on Firefox.

--- a/styles/charged-moves.css
+++ b/styles/charged-moves.css
@@ -107,13 +107,11 @@ td:last-of-type p:after {
 th > div {
     writing-mode: vertical-rl;
     transform: rotate(180deg);
+    width: 1.2em; /* firefox-only bug where vertical-rl causes 0 width */
+    margin: 0.25em 0.25em 0 0;
 }
-th {
-    vertical-align: top;
-    width: 1.6em; /* firefox-only bug where vertical-rl causes 0 width */
-    padding: 0.25em;
-}
-td {
+
+th, td {
     vertical-align: top;
 }
 
